--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="header"></div>
-    <script src="/script/header.js"></script>
+    <script src="/Portfolio/script/header.js"></script>
 </body>
 </html>
