--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <script src="/Portfolio/script/header.js"></script>
+    <!-- <script src="/Portfolio/script/header.js"></script> Jag försökte få det att fungera med github pages, men det blev för krångligt med hur det fungerade. -->
+    <script src="/script/header.js"></script>
 </body>
 </html>
