--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/Portfolio/tailwind.config.js"></script>
 </head>
-<body>
+<body class="h-screen bg-gradient-to-br from-slate-900 to-slate-500 bg-fixed">
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
 </body>
