--- a/contact/index.html
+++ b/contact/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="h-screen bg-gradient-to-br from-slate-900 to-slate-500">
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
 </body>
