--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<html lang="se">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-    <link rel="stylesheet" href="stylesheet.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/Portfolio/tailwind.config.js"></script>
+    <title>Albin Persson</title>
+    <link rel="stylesheet" href="/Portfolio/stylesheet.css">
+    <link rel="icon" href="/Portfolio/favicon.ico">
 </head>
-<body class="h-screen bg-gradient-to-br from-slate-900 to-slate-500 bg-fixed">
+<body>
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
+    <script src="/Portfolio/script/backbround.js"></script>
 </body>
 </html>
