Updated background for all sites

--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/Portfolio/stylesheet.css">
 </head>
-<body class="h-screen bg-gradient-to-br from-slate-900 to-slate-500">
+<body>
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
+    <script src="/Portfolio/script/backbround.js"></script>
 </body>
 </html>
