--- a/work/index.html
+++ b/work/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Work</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/Portfolio/stylesheet.css">
 </head>
-<body class="h-screen bg-gradient-to-br from-slate-900 via-slate-500 via-100% to-slate-500 bg-fixed">
+<body>
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
+    <script src="/Portfolio/script/backbround.js"></script>
 </body>
 </html>
