updated to use gsap for background animation

--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
-    <script src="/Portfolio/script/backbround.js"></script>
+    <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
 </body>
 </html>
