--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Albin Persson</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
     <link rel="icon" href="/Portfolio/favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <script src="/Portfolio/script/header.js"></script>
-    <script src="/Portfolio/script/backbround.js"></script>
+    <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
 </body>
 </html>
