--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="icon" href="/Portfolio/favicon.ico">
 </head>
 <body>
-    <div id="header"></div>
-    <script src="/Portfolio/script/header.js"></script>
-    <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
+    <div id="bg">
+        <div id="header"></div>
+        <script src="/Portfolio/script/header.js"></script>
+        <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
+    </div>
 </body>
 </html>
