--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <title>Albin Persson</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
     <link rel="icon" href="/Portfolio/favicon.ico">
+    <!--<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>--->
 </head>
 <body>
-    <div id="bg">
-        <div id="header"></div>
-        <script src="/Portfolio/script/header.js"></script>
-        <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
-    </div>
+    <div id="bg"></div>
+    <header></header>
+    <main>
+        <div>
+            <h1 id="welcome">Tjena, jag är Albin.</h1>
+        </div>
+        <div style="height: 2000px;"></div>
+    </main>
+    <footer></footer>
+    
+    <script src="/Portfolio/script/header.js"></script>
+    <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
 </body>
 </html>
