--- a/work/index.html
+++ b/work/index.html
@@ -1,4 +1,4 @@
-<html lang="se">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
 </head>
 <body>
-    <div id="header"></div>
+    <div id="bg"></div>
+    <header></header>
+    <main></main>
+    <footer></footer>
     <script src="/Portfolio/script/header.js"></script>
     <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
 </body>
