--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <div id="bg"></div>
     <header></header>
     <main>
-        <div>
-            <h1 id="welcome">Tjena, jag är Albin.</h1>
-        </div>
-        <div style="height: 2000px;"></div>
+        <section>
+            <h1 id="welcome">Tjena, jag är Albin!</h1>
+            <div id="bubbelPop"></div>
+        </section>
+        
     </main>
     <footer></footer>
     
     <script src="/Portfolio/script/header.js"></script>
     <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
+    <script type="module" src="/Portfolio/script/bubbelPop.js"></script>
 </body>
 </html>
