--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albin Persson</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
-    <link rel="icon" href="/Portfolio/favicon.ico">
+    <!-- <link rel="icon" href="/Portfolio/favicon.ico"> -->
     <!--<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>--->
 </head>
 <body>
