started with footer

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <script src="/Portfolio/script/header.js"></script>
     <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
     <script type="module" src="/Portfolio/script/bubbelPop.js"></script>
+    <script src="/Portfolio/script/footer.js"></script>
 </body>
 </html>
