finnished footer with reservation for change and redid all html documents

--- a/about/index.html
+++ b/about/index.html
@@ -1,16 +1,24 @@
+<!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
+    <link rel="icon" href="/Portfolio/favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="bg"></div>
     <header></header>
-    <main></main>
+    <main>
+        <h1></h1>
+    </main>
     <footer></footer>
+    
     <script src="/Portfolio/script/header.js"></script>
     <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
+    <script type="module" src="/Portfolio/script/bubbelPop.js"></script>
+    <script src="/Portfolio/script/footer.js"></script>
 </body>
 </html>
