--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Albin Persson</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
     <link rel="icon" href="/Portfolio/favicon.png">
-    <!--<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>--->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="bg"></div>
@@ -16,7 +16,6 @@
             <h1 id="welcome">Tjena, jag är Albin!</h1>
             <div id="bubbelPop"></div>
         </section>
-        
     </main>
     <footer></footer>
     
