--- a/work/index.html
+++ b/work/index.html
@@ -1,20 +1,24 @@
+<!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Work</title>
+    <title>My work</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/Portfolio/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="bg"></div>
     <header></header>
-    <main></main>
+    <main>
+        
+    </main>
     <footer></footer>
+    
     <script src="/Portfolio/script/header.js"></script>
     <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
+    <script type="module" src="/Portfolio/script/bubbelPop.js"></script>
+    <script src="/Portfolio/script/footer.js"></script>
 </body>
 </html>
