started about me

--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,17 @@
 <body>
     <div id="bg"></div>
     <header></header>
-    <main>
-        <h1></h1>
+    <main id="about">
+        <h1>Vem är Albin, altså jag?</h1>
+        <div>
+            <h2>Barnsben</h2>
+            <p>Jag växte upp i Enebyberg i Stockholm där jag gick på en liten förskola med dagliga skogsutflykter som 
+                hette Enebo. Redan från att jag var endast någon månad gammal åkte jag med mina föräldrar och faster
+                till det som då var vår stuga i Åre trakten under loven, en stuga utan vatten och endast ett utedass. 
+                Fröet såddes då för min framtid. 
+            </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!4v1748900161494!6m8!1m7!1sOs4RnX695Iv_RXQIx-51dw!2m2!1d59.427386647491!2d18.02740677881266!3f284.45114972963444!4f-8.001010254550224!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
     <footer></footer>
     
