finnished about me

--- a/about/index.html
+++ b/about/index.html
@@ -13,14 +13,47 @@
     <header></header>
     <main id="about">
         <h1>Vem är Albin, altså jag?</h1>
-        <div>
-            <h2>Barnsben</h2>
-            <p>Jag växte upp i Enebyberg i Stockholm där jag gick på en liten förskola med dagliga skogsutflykter som 
+        <div class="grid">
+            <div class="grid-item">
+                <h2>Barnsben</h2>
+                <p>Jag växte upp i Enebyberg i Stockholm där jag gick på en liten förskola med dagliga skogsutflykter som 
                 hette Enebo. Redan från att jag var endast någon månad gammal åkte jag med mina föräldrar och faster
                 till det som då var vår stuga i Åre trakten under loven, en stuga utan vatten och endast ett utedass. 
                 Fröet såddes då för min framtid. 
-            </p>
-            <iframe src="https://www.google.com/maps/embed?pb=!4v1748900161494!6m8!1m7!1sOs4RnX695Iv_RXQIx-51dw!2m2!1d59.427386647491!2d18.02740677881266!3f284.45114972963444!4f-8.001010254550224!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </p>
+            </div>
+            <div class="grid-item">
+                <iframe src="https://www.google.com/maps/embed?pb=!4v1748900161494!6m8!1m7!1sOs4RnX695Iv_RXQIx-51dw!2m2!1d59.427386647491!2d18.02740677881266!3f284.45114972963444!4f-8.001010254550224!5f0.7820865974627469" style="border:0;" loading="lazy" width="100%" height="100%" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="grid-item">
+                <img src="/Portfolio/pictures/Snapchat-1355954143.jpg" alt="Gruppen" width="100%" height="auto">
+            </div>
+            <div class="grid-item">
+                <h2>Grundskole åren</h2>
+                <p>
+                    Under slutet av förskolan fick vi hem brev från Täby Friskola
+                    där de gjorde reklam för en hälsa på kväll som jag sa till mina
+                    föräldrar att jag ville gå på. Väl där fick min mamma veta att
+                    skolan var inriktade på mattematik och valde då att det var där
+                    jag skulle gå. <br> Jag blev fort kompis med de andra i klassen
+                    som senare också gillade matte och programmering. När vi började 
+                    på högstadiet och blev fler klasser blev vänngruppen ännu större. 
+                    <br> Under tiden började jag också med orientering och skidskytte.
+                </p>
+            </div>
+            <div class="grid-item">
+                <h2>Gymnasiet</h2>
+                <p>
+                    Till gymnasiet valde jag att flytta till Boden för att gå på ett
+                    skidskytte gymnasium. Med tanke på gruppen jag hängde med i grundskolan
+                    valde jag att gå teknik för att studera mattematik och programmering. 
+                    <br> På gymnasiet fick jag veta att vi under trean skulle driva eget
+                    företag vilket verkar som en rolig och lärorik grej. 
+                </p>
+            </div>
+            <div class="grid-item">
+                <img src="/Portfolio/pictures/20250426_171338.jpg" alt="Jag på skjutvallen" width="80%" height="auto" style="overflow: hidden;">
+            </div>
         </div>
     </main>
     <footer></footer>
