--- a/work/index.html
+++ b/work/index.html
@@ -11,14 +11,76 @@
 <body>
     <div id="bg"></div>
     <header></header>
-    <main>
-        
+    <main id="work">
+        <h1>Mitt arbete</h1>
+        <section id="projects">
+            <h2>Projekt</h2>
+            <p id="project-joke">Det må inte vara många än</p>
+            <div class="project-cards">
+                <div class="card">
+                    <img src="/Portfolio/pictures/robert.png" alt="Robert gui">
+                    <h3>R.O.B.E.R.T</h3>
+                    <p>
+                        Robert är ett projekt stora delar av klassen arbetat på för att visa
+                        upp på skolans hälsa på dag från början. Det byggdes ut från ett mindre
+                        liknande projekt. Robert är en robot av lego med spike motorer och en 
+                        raspberry pi med en build hat och en kamera. Via en webbsida kan man 
+                        styra roboten och se kamerans bild. Med flera robotar kan man spela två 
+                        olika pvp spel, antingen pvp eller capture the flag. <br><a href="https://github.com/r-/robert" target="_blank">https://github.com/r-/robert</a>
+                        <br> <a href="https://github.com/r-/robert-dojo" target="_blank">https://github.com/r-/robert-dojo</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section id="tools">
+            <h2>Verktyg jag använder</h2>
+            <div id="tools-box">
+                <div class="box">
+                    <div class="outer-box">
+                        <div class="inner-box">
+                            <img src="/Portfolio/pictures/vscode_logo.png" alt="VSCode">
+                        </div>
+                    </div>
+                    <p>VSCode</p>
+                </div>
+                <div class="box">
+                    <div class="outer-box">
+                        <div class="inner-box">
+                            <img src="/Portfolio/pictures/figma_logo.png" alt="Figma">
+                        </div>
+                    </div>
+                    <p>Figma</p>
+                </div>
+                <div class="box">
+                    <div class="outer-box">
+                        <div class="inner-box">
+                            <img src="/Portfolio/pictures/Microsoft365.png" alt="365">
+                        </div>
+                    </div>
+                    <p>Microsoft365</p>
+                </div>
+                <div class="box">
+                    <div class="outer-box">
+                        <div class="inner-box">
+                            <img src="/Portfolio/pictures/fusion-badge-75x75.webp" alt="Fusion">
+                        </div>
+                    </div>
+                    <p>Fusion 365</p>
+                </div><div class="box">
+                    <div class="outer-box">
+                        <div class="inner-box">
+                            <img src="/Portfolio/pictures/Neovim-mark.svg.png" alt="Neovim">
+                        </div>
+                    </div>
+                    <p>Neovim</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
     
     <script src="/Portfolio/script/header.js"></script>
     <script type="module" src="/Portfolio/script/backgroundgsap.js"></script>
-    <script type="module" src="/Portfolio/script/bubbelPop.js"></script>
     <script src="/Portfolio/script/footer.js"></script>
 </body>
 </html>
