--- a/contact/index.html
+++ b/contact/index.html
@@ -6,13 +6,21 @@
     <title>Contact Me</title>
     <link rel="stylesheet" href="/Portfolio/stylesheet.css">
     <link rel="icon" href="/Portfolio/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="bg"></div>
     <header></header>
-    <main>
-        
+    <main id="contact">
+        <h1>Kontakta mig</h1>
+        <p>Du får gärna kontakta mig genom något av nedanstående alternativen. </p>
+        <ul>
+            <li><i class="fa-solid fa-envelope"></i> <a href="mailto:kastanjake@gmail.com">kastanjake@email.com</a></li>
+            <li><i class="fa-solid fa-phone"></i> <a href="tel:0763401582">076-340 15 82</a></li>
+            <li><i class="fa-solid fa-home"></i> Min Adress</li>
+            <li><i class="fa-brands fa-discord"></i> 4lbinp</li>
+        </ul>
     </main>
     <footer></footer>
     
